[project]
name = "LLMChatExporter"
version = "0.1.0"
description = "Extracting chats of common LLMs that don't support this option ."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = "<3.14,>=3.10"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "black (>=25.9.0,<26.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false